# rain-engine

./: .env.example  Cargo.toml  README.md  README_JOBS.md  improvements.md  typeshare.toml  typeshare_old.toml
.github/workflows/: ci.yml
approvals/: b23cd7a8-120b-42e3-8b39-c9f1ac71f158.yaml
examples/: in_memory_kernel.rs  provider_gemini.rs  provider_openai.rs  sqlite_embedding.rs
rain-engine-blob/: Cargo.toml
rain-engine-blob/src/: lib.rs
rain-engine-channels/: Cargo.toml
rain-engine-channels/src/: discord.rs  lib.rs  slack.rs  telegram.rs
rain-engine-cli/: Cargo.toml
rain-engine-cli/examples/: agent.yaml  customer_support_agent.rs
rain-engine-cli/src/: main.rs
rain-engine-client/: Cargo.toml
rain-engine-client/src/: lib.rs
rain-engine-cognition/: Cargo.toml
rain-engine-cognition/src/: lib.rs  rag.rs  research_planner.rs
rain-engine-core/: Cargo.toml
rain-engine-core/src/: blob.rs  coordination.rs  engine.rs  ledger.rs  lib.rs  llm.rs  memory.rs  models.rs  policy.rs  retrieval.rs  skill_store.rs  state_cache.rs  traits.rs  types.rs
rain-engine-gateway/: Cargo.toml
rain-engine-gateway/src/: heartbeat.rs  main.rs  wake.rs
rain-engine-ingress/: Cargo.toml
rain-engine-ingress/src/: lib.rs
rain-engine-macros/: Cargo.toml
rain-engine-macros/src/: lib.rs
rain-engine-memory/: Cargo.toml
rain-engine-memory/src/: lib.rs
rain-engine-openai/: Cargo.toml
rain-engine-openai/src/: lib.rs
rain-engine-provider-gemini/: Cargo.toml
rain-engine-provider-gemini/src/: lib.rs
rain-engine-runtime/: Cargo.toml
rain-engine-runtime/examples/: embedded_sqlite.rs  runtime_postgres.rs
rain-engine-runtime/src/: lib.rs
rain-engine-skills/: Cargo.toml
rain-engine-skills/src/: file_ops.rs  http_fetch.rs  lib.rs  memory_search.rs  shell_exec.rs  web_reader.rs
rain-engine-store-pg/: Cargo.toml
rain-engine-store-pg/src/: lib.rs
rain-engine-store-postgres/: Cargo.toml
rain-engine-store-postgres/src/: lib.rs
rain-engine-store-sqlite/: Cargo.toml
rain-engine-store-sqlite/src/: lib.rs
rain-engine-store-valkey/: Cargo.toml
rain-engine-store-valkey/src/: lib.rs
rain-engine-ui/: components.json  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
rain-engine-ui/src/: App.css  App.tsx  index.css
rain-engine-ui/src/components/ui/: button.tsx  input.tsx
rain-engine-wasm/: Cargo.toml
rain-engine-wasm/src/: lib.rs
scripts/: generate_sdks.sh
sdk/typescript/: client.ts  index.ts  package.json  rain-engine.ts  tsconfig.json
src/: lib.rs  server.rs
tests/: server_client_test.rs
