[workspace]
members = [
    "rain-engine-blob",
    "rain-engine-cli",
    "rain-engine-core",
    "rain-engine-ingress",
    "rain-engine-macros",
    "rain-engine-provider-gemini",
    "rain-engine-openai",
    "rain-engine-wasm",
    "rain-engine-runtime",
    "rain-engine-store-pg",
    "rain-engine-store-sqlite",
    "rain-engine-store-valkey",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
futures-util = "0.3"
metrics = "0.24"
multer = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = "39"
wat = "1"
quote = "1"
proc-macro2 = "1"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
serde_yaml = "0.9"
