[package]
name = "rain-engine-blob"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
