[package]
name = "rain-engine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rain-engine-blob = { path = "../rain-engine-blob" }
rain-engine-core = { path = "../rain-engine-core" }
rain-engine-ingress = { path = "../rain-engine-ingress" }
rain-engine-runtime = { path = "../rain-engine-runtime" }
rain-engine-store-valkey = { path = "../rain-engine-store-valkey" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
