[package]
name = "rain-engine-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rain-engine-core = { path = "../rain-engine-core" }
rain-engine-runtime = { path = "../rain-engine-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
