[package]
name = "rain-engine-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP client for RainEngine runtimes"
documentation = "https://docs.rs/rain-engine-client"
readme = "../README.md"
keywords = ["agents", "llm", "automation", "event-sourcing", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
rain-engine-core = { path = "../rain-engine-core", version = "0.1.0" }
rain-engine-runtime = { path = "../rain-engine-runtime", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
