[package]
name = "rain-engine-cognition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio.workspace = true

[dev-dependencies]
