[package]
name = "rain-engine-cognition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Planning and task orchestration for RainEngine"
documentation = "https://docs.rs/rain-engine-cognition"
readme = "../README.md"
keywords = ["agents", "llm", "automation", "event-sourcing", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio.workspace = true

[dev-dependencies]
