[package]
name = "rain-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider-neutral event kernel for RainEngine"
documentation = "https://docs.rs/rain-engine-core"
readme = "../README.md"
keywords = ["agents", "llm", "automation", "event-sourcing", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
async-trait.workspace = true
dashmap = "6.1"
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
typeshare.workspace = true
redis = { workspace = true, features = ["tokio-comp"] }
