[package]
name = "rain-engine-ingress"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rain-engine-core = { path = "../rain-engine-core" }
rain-engine-store-valkey = { path = "../rain-engine-store-valkey" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
