[package]
name = "rain-engine-provider-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
