[package]
name = "rain-engine-provider-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Gemini provider for RainEngine"
documentation = "https://docs.rs/rain-engine-provider-gemini"
readme = "../README.md"
keywords = ["agents", "llm", "automation", "event-sourcing", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
rain-engine-core = { path = "../rain-engine-core", version = "0.1.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
