[package]
name = "rain-engine-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
rain-engine-memory = { path = "../rain-engine-memory" }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
