[package]
name = "rain-engine-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
