[package]
name = "rain-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
wasmtime.workspace = true

[dev-dependencies]
axum.workspace = true
wat.workspace = true
