[package]
name = "rain-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM skill execution for RainEngine"
documentation = "https://docs.rs/rain-engine-wasm"
readme = "../README.md"
keywords = ["agents", "llm", "automation", "event-sourcing", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rain-engine-core = { path = "../rain-engine-core", version = "0.1.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
wasmtime.workspace = true

[dev-dependencies]
axum.workspace = true
wat.workspace = true
